[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/soundboard/soundboard_panel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_bg"]
bg_color = Color(0.184, 0.192, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0

[node name="SoundboardPanel" type="PanelContainer"]
custom_minimum_size = Vector2(220, 0)
theme_override_styles/panel = SubResource("panel_bg")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Soundboard"
theme_override_font_sizes/font_size = 14

[node name="SearchInput" type="LineEdit" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 28)
placeholder_text = "Search sounds..."
theme_override_font_sizes/font_size = 12

[node name="Scroll" type="ScrollContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="SoundList" type="VBoxContainer" parent="VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="EmptyLabel" type="Label" parent="VBox"]
visible = false
layout_mode = 2
text = "No sounds available."
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
